"Updated pom.xml, refactored various Java classes, and modified application.properties file."